--- a/styles.css
+++ b/styles.css
@@ -137,18 +137,15 @@ label {
     text-align: center;
     transition: opacity 0.5s ease-in-out;
     -moz-transition: opacity 0.5s ease-in-out;
-    /* Firefox 4 */
     -webkit-transition: opacity 0.5s ease-in-out;
-    /* Safari and Chrome */
     -o-transition: opacity 0.5s ease-in-out;
-    /* Opera */
     -ms-transition: opacity 0.5s ease-in-out;
     position: absolute;
-    opacity: 0%;
+    opacity: 0;
 }
 
 .show {
-    opacity: 100%;
+    opacity: 1;
 }
 
 .close {
