--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@ label {
 }
 
 .font-on-click {
-    display: flex;
+    display: inline-block;
 }
 
 .errorbox-wrapper {
@@ -249,6 +249,7 @@ tr:nth-child(even) {
     .answer-block {
         top: 47%;
         width: 20%;
+        left: 40%;
     }
     .font {
         font-size: 3vw;
