--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ body {
 }
 
 .errorbox-wrapper {
-    display: flex;
+    display: block;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -105,6 +105,7 @@ body {
     justify-content: center;
     text-align: center;
     position: absolute;
+
 }
 
 .show {
