--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,7 @@ body {
     align-items: center;
     text-align: center;
     position: relative;
+    
 }
 
 .error-box {
@@ -104,8 +105,7 @@ body {
     width: 45%;
     justify-content: center;
     text-align: center;
-    position: absolute;
-
+    margin: auto;
 }
 
 .show {
